# dirichlet_ensemble_attunet

./: Makefile  README.md  pyproject.toml
dirichlet_ensemble_attunet/: __init__.py  att_unet.py  attention.py  basic_blocks.py  dirichlet_ensemble_attunet.py  ensemble_att_unet.py  eval_utils.py  utils.py
src/: main.py
