[tool.poetry]
name = "dirichlet_ensemble_attunet"
version = "0.4.1"
description = ""
authors = ["Jet <taijunjet@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
torch = "^2.2.2"
jj-wingman = "^0.7.1"
opencv-python = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
